syntax = "proto3";

package com.road.yishi.proto.consortia;

message ConsortiaRenameRspMsg {
  bool result = 1;
}
